// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components AddVolunteer 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <section
      id="volunteer-signup-form"
    >
      <h1>
        New Volunteer Signup Form
      </h1>
      <h2>
        Your Details
      </h2>
      <form
        action={undefined}
        className="ui form"
        onSubmit={[Function]}
      >
        <div
          className="field"
        >
          <div
            className="ui input"
            content={undefined}
          >
            <input
              disabled={undefined}
              id="firstname"
              onChange={[Function]}
              placeholder="First name"
              required={undefined}
              tabIndex={undefined}
              type="text"
            />
          </div>
        </div>
        <input
          id="lastname"
          placeholder="Surname"
          type="text"
        />
        <input
          id="phone"
          placeholder="Phone"
          type="text"
        />
        <input
          id="email"
          placeholder="Email"
          type="text"
        />
        <div
          className="submit-cancel"
        >
          <input
            className="ui button"
            type="submit"
            value="Submit"
          />
          <div
            className="a-wrap"
          >
            <a
              className="ui button"
              href="/"
              onClick={[Function]}
            >
              Cancel
            </a>
          </div>
        </div>
      </form>
    </section>
  </div>
  <button
    onClick={[Function]}
    style={
      Object {
        "background": "#28c",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <button
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div
      style={undefined}
    >
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
            "color": "#444",
            "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Components
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            AddVolunteer
          </h2>
        </div>
        <div
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          <div
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "color": "#444",
                "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                "fontSize": "15px",
              }
            }
          >
            New volunteer form
          </div>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            className="css-4akams"
          >
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;
                  AddVolunteer
                </span>
                <span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      onSubmit
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        <span>
                          {
                          <span
                            style={
                              Object {
                                "color": "#170",
                              }
                            }
                          >
                            onClick()
                          </span>
                          }
                        </span>
                      </span>
                    </span>
                     
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  /&gt;
                </span>
              </div>
            </div>
            <button
              className="css-gydez8"
              onClick={[Function]}
            >
              <div
                className="css-kv47nt"
              >
                <div
                  style={
                    Object {
                      "marginBottom": 6,
                    }
                  }
                >
                  Copied!
                </div>
                <div>
                  Copy
                </div>
              </div>
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              AddVolunteer
              " Component
            </h2>
            <table
              className="css-1ytzlk7"
            >
              <thead>
                <tr>
                  <th
                    className="css-d52hbj"
                  >
                    property
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    propType
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    required
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    default
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    onSubmit
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    yes
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components Avatar 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <p>
        Use Knobs to show checked in/out status
      </p>
      <div
        className="ui center aligned container avatar-wrapper"
      >
        <img
          className="ui small avatar circular centered image checkedInFalse"
          src="/images/avatars/3.jpg"
        />
        <h3
          className="ui center aligned header"
        >
          Ed
           
          Sheeran
        </h3>
      </div>
    </div>
  </div>
  <button
    onClick={[Function]}
    style={
      Object {
        "background": "#28c",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <button
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div
      style={undefined}
    >
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
            "color": "#444",
            "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Components
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            Avatar
          </h2>
        </div>
        <div
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          <div
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "color": "#444",
                "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                "fontSize": "15px",
              }
            }
          >
            Checked in/out
          </div>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            className="css-4akams"
          >
            <div>
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;
                    div
                  </span>
                  <span />
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &gt;
                  </span>
                </div>
                <div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 33,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      p
                    </span>
                    <span />
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &gt;
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 48,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      Use Knobs to show checked in/out status
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 33,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;/
                      p
                      &gt;
                    </span>
                  </div>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 33,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;
                    Avatar
                  </span>
                  <span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        firstName
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            "
                            Ed
                            "
                          </span>
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        lastName
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            "
                            Sheeran
                            "
                          </span>
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        fileName
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            "
                            3.jpg
                            "
                          </span>
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        isCheckedin
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          <span>
                            {
                            <span
                              style={
                                Object {
                                  "color": "#a11",
                                }
                              }
                            >
                              false
                            </span>
                            }
                          </span>
                        </span>
                      </span>
                      <br />
                    </span>
                  </span>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    /&gt;
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;/
                    div
                    &gt;
                  </span>
                </div>
              </div>
            </div>
            <button
              className="css-gydez8"
              onClick={[Function]}
            >
              <div
                className="css-kv47nt"
              >
                <div
                  style={
                    Object {
                      "marginBottom": 6,
                    }
                  }
                >
                  Copied!
                </div>
                <div>
                  Copy
                </div>
              </div>
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              Avatar
              " Component
            </h2>
            <table
              className="css-1ytzlk7"
            >
              <thead>
                <tr>
                  <th
                    className="css-d52hbj"
                  >
                    property
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    propType
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    required
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    default
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    _id
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    yes
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    firstName
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    yes
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    lastName
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    yes
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    fileName
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    yes
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    isCheckedin
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    yes
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components User 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <p>
        Use Knobs to show check in confirmation
      </p>
      <div
        className="ui segment"
        style={
          Object {
            "marginTop": "7em",
          }
        }
      >
        <div
          className="ui center aligned container avatar-wrapper"
        >
          <img
            className="ui small avatar circular centered image checkedInFalse"
            src="/images/avatars/2.jpg"
          />
          <h3
            className="ui center aligned header"
          >
            Mickey
             
            Mouse
          </h3>
        </div>
        <div
          className="ui buttons"
        >
          <button
            className="ui button"
            disabled={undefined}
            onClick={[Function]}
            role="button"
            tabIndex={undefined}
          >
            Cancel
          </button>
          <div
            className="or"
            data-text={undefined}
          />
          <button
            className="ui positive button"
            disabled={undefined}
            onClick={[Function]}
            role="button"
            tabIndex={undefined}
          >
            Check In
          </button>
        </div>
      </div>
    </div>
  </div>
  <button
    onClick={[Function]}
    style={
      Object {
        "background": "#28c",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <button
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div
      style={undefined}
    >
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
            "color": "#444",
            "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Components
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            User
          </h2>
        </div>
        <div
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          <div
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "color": "#444",
                "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                "fontSize": "15px",
              }
            }
          >
            Checked in/out
          </div>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            className="css-4akams"
          >
            <div>
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;
                    div
                  </span>
                  <span />
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &gt;
                  </span>
                </div>
                <div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 33,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      p
                    </span>
                    <span />
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &gt;
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 48,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      Use Knobs to show check in confirmation
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 33,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;/
                      p
                      &gt;
                    </span>
                  </div>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 33,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;
                    User
                  </span>
                  <span>
                    <span>
                       
                      <span
                        style={Object {}}
                      >
                        loading
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          <span>
                            {
                            <span
                              style={
                                Object {
                                  "color": "#a11",
                                }
                              }
                            >
                              false
                            </span>
                            }
                          </span>
                        </span>
                      </span>
                    </span>
                    <span>
                       
                      <span
                        style={Object {}}
                      >
                        isCheckedin
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          <span>
                            {
                            <span
                              style={
                                Object {
                                  "color": "#a11",
                                }
                              }
                            >
                              false
                            </span>
                            }
                          </span>
                        </span>
                      </span>
                    </span>
                    <span>
                       
                      <span
                        style={Object {}}
                      >
                        person
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          <span>
                            {
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                id
                              </span>
                              : 
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                123ASD
                                "
                              </span>
                              , 
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                name
                              </span>
                              : 
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                Mickey
                                "
                              </span>
                              , 
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                lastname
                              </span>
                              : 
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                Mouse
                                "
                              </span>
                              , 
                              …
                              }
                            </span>
                            }
                          </span>
                        </span>
                      </span>
                       
                    </span>
                  </span>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    /&gt;
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;/
                    div
                    &gt;
                  </span>
                </div>
              </div>
            </div>
            <button
              className="css-gydez8"
              onClick={[Function]}
            >
              <div
                className="css-kv47nt"
              >
                <div
                  style={
                    Object {
                      "marginBottom": 6,
                    }
                  }
                >
                  Copied!
                </div>
                <div>
                  Copy
                </div>
              </div>
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              User
              " Component
            </h2>
            <small>
              No propTypes defined!
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components NewVolunteerForm 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <section
      id="volunteer-signup-form"
    >
      <h1>
        New Volunteer Signup Form
      </h1>
      <h2>
        Your Details
      </h2>
      <form
        className="commentForm"
        onSubmit={undefined}
      >
        <input
          id="firstname"
          placeholder="First name"
          type="text"
        />
        <input
          id="lastname"
          placeholder="Surname"
          type="text"
        />
        <input
          placeholder="Your email"
          type="text"
        />
        <input
          placeholder="Address"
          type="text"
        />
        <input
          placeholder="Suburb"
          type="text"
        />
        <input
          placeholder="State"
          type="text"
        />
        <input
          placeholder="Postcode"
          type="text"
        />
        <input
          placeholder="Phone"
          type="text"
        />
        <input
          placeholder="Mobile"
          type="text"
        />
        <h2>
          Emergency Contact
        </h2>
        <input
          placeholder="Name"
          type="text"
        />
        <input
          placeholder="Email"
          type="text"
        />
        <input
          placeholder="Address"
          type="text"
        />
        <input
          placeholder="Suburb"
          type="text"
        />
        <input
          placeholder="State"
          type="text"
        />
        <input
          placeholder="Postcode"
          type="text"
        />
        <input
          placeholder="Phone"
          type="text"
        />
        <input
          placeholder="Mobile"
          type="text"
        />
        <h2>
          Other Information
        </h2>
        <input
          placeholder="How many bikes in your household?"
          type="text"
        />
        <input
          checked={true}
          name="primary-bike"
          type="radio"
          value="Road/racer"
        />
         Road/racer
        <input
          name="primary-bike"
          type="radio"
          value="Hybrid"
        />
         Hybrid
        <input
          name="primary-bike"
          type="radio"
          value="Mountain Bike"
        />
         Mountain Bike
        <div
          className="submit-cancel"
        >
          <input
            className="ui button"
            type="submit"
            value="Submit"
          />
          <div
            className="a-wrap"
          >
            <a
              className="ui button"
              href="/"
              onClick={[Function]}
            >
              Cancel
            </a>
          </div>
        </div>
      </form>
    </section>
  </div>
  <button
    onClick={[Function]}
    style={
      Object {
        "background": "#28c",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <button
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div
      style={undefined}
    >
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
            "color": "#444",
            "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Components
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            NewVolunteerForm
          </h2>
        </div>
        <div
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          <div
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "color": "#444",
                "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                "fontSize": "15px",
              }
            }
          >
            New volunteer form
          </div>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            className="css-4akams"
          >
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;
                  NewVolunteerForm
                </span>
                <span />
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  /&gt;
                </span>
              </div>
            </div>
            <button
              className="css-gydez8"
              onClick={[Function]}
            >
              <div
                className="css-kv47nt"
              >
                <div
                  style={
                    Object {
                      "marginBottom": 6,
                    }
                  }
                >
                  Copied!
                </div>
                <div>
                  Copy
                </div>
              </div>
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              NewVolunteerForm
              " Component
            </h2>
            <small>
              No propTypes defined!
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
